--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -19,7 +19,7 @@
     </li>
     <li>
       <a href="/archive.html" class="white-text">
-        <i class="mdi mdi-settings left indigo-text text-lighten-3"></i>
+        <i class="mdi mdi-archive left indigo-text text-lighten-3"></i>
         Archive
       </a>
     </li>
@@ -46,7 +46,7 @@
     </li>
     <li>
       <a href="/archive.html" class="waves-effect waves-teal black-text">
-        <i class="mdi mdi-settings left blue-text"></i>
+        <i class="mdi mdi-archive left blue-text"></i>
         Archive
       </a>
     </li>
