--- a/partials/head.html
+++ b/partials/head.html
@@ -3,12 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <!-- MUST in hex format, may the same as header-color. This color is for android chrome browser. -->
-  <meta name="theme-color" content="#5c6bc0">
+  <meta name="theme-color" content="$head-theme-colour$">
 
   <!-- Metadata. -->
   <meta name="keywords" content="hakyll,static site generator,static,site,generator,haskell,blog"/>
-  <title>$if(title)$$title$$else$Futtetennismo$endif$</title>
-  <meta name="description" content="$if(teaser-short)$$teaser-short$$else$Futtennismo$endif$">
+  <title>$if(title)$$title$$else$$head-title$$endif$</title>
+  <meta name="description" content="$if(teaser-short)$$teaser-short$$else$$head-title$$endif$">
   <link rel="canonical" href="$url$">
   <link rel="alternate" type="application/atom+xml" title="$title$" href="/feed.xml" />
 
