--- a/templates/default.html
+++ b/templates/default.html
@@ -8,7 +8,7 @@
   <body>
 
     <header class="site-header">
-      <nav class="nav-extended indigo lighten-1">
+      <nav class="nav-extended $header-colour$">
         $partial("partials/navbar.html")$
       </nav>
     </header>
